[gd_scene load_steps=2 format=3 uid="uid://bruk21duwlfsd"]

[ext_resource type="Script" path="res://UI/game_over.gd" id="1_62lnv"]

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62lnv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Seperator"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.015
offset_left = 248.0
offset_top = 76.0
offset_right = -322.92
offset_bottom = 213.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Respawn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
text = "Respawn"

[node name="Return_menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
text = "RETURN TO MENU"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Return_menu" to="." method="_on_return_menu_pressed"]
